# Eskalyr

./: .gitignore  Dockerfile  README.md  app.py  benchmark_report.md  dashboard.py  docker-compose.yml  evaluate_retrieval.py  ingest_pdf.py  pyproject.toml  rag_chain.py
.github/workflows/: ci.yml
