[project]
name = "eskalyr"
version = "0.1.0"
description = "RAG-based enterprise network support chatbot"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2.16",
    "langchain-community>=0.2.16",
    "langchain-chroma>=0.1.4",
    "langchain-groq>=0.1.10",
    "langchain-huggingface>=0.0.3",
    "python-dotenv>=1.0.1",
    "streamlit>=1.38.0",
    "pypdf>=4.3.1",
    "chromadb>=0.5.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0"
]
